[workspace]
members = [
	"vendor/evm-tracing",
	"vendor/primitives/debug",
	"vendor/primitives/evm-tracing-events",
	"vendor/primitives/txpool",
	"vendor/rpc/debug",
	"vendor/rpc/trace",
	"vendor/rpc/txpool",
	"vendor/rpc-core/debug",
	"vendor/rpc-core/trace",
	"vendor/rpc-core/txpool",
	"vendor/rpc-core/types",
	"vendor/runtime/evm-tracer",
	"vendor/runtime/ext",
]

[workspace.package]
authors = ["Stake Technologies <devops@stake.co.jp>"]
edition = "2021"
homepage = "https://astar.network"
repository = "https://github.com/AstarNetwork/astar-frame"

[workspace.dependencies]
# General deps
# (wasm)
environmental = { version = "1.1.2", default-features = false }
sha3 = { version = "0.10.1", default-features = false }
num_enum = { version = "0.5.3", default-features = false }
log = { version = "0.4.16", default-features = false }
num-traits = { version = "0.2", default-features = false }
rand = { version = "0.8.5", default-features = false }
bounded-collections = { version = "0.1.5", default-features = false }

# (native)
futures = { version = "0.3.26" }
rlp = "0.5"
tokio = { version = "1.24.2" }
tracing = "0.1.34"
similar-asserts = { version = "1.1.0" }
assert_matches = "1.3.0"
hex-literal = "0.3.4"
hex = { version = "0.4", features = ["serde"] }
libsecp256k1 = "0.7.0"
impl-trait-for-tuples = "0.2.2"
slices = "0.2.0"
derive_more = { version = "0.99" }
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0" }

# Encoding
# (wasm)
parity-scale-codec = { version = "3.4.0", default-features = false, features = ["derive"] }
scale-info = { version = "2.3.0", default-features = false, features = ["derive"] }

# (native)
serde = { version = "1.0.136", features = ["derive"] }
serde_json = { version = "1.0.92" }

# EVM & Ethereum
# (wasm)
evm = { version = "0.37.0", default-features = false }
ethereum-types = { version = "0.14", default-features = false }
ethereum = { version = "0.14.0", default-features = false }
evm-gasometer = { version = "0.37.0", default-features = false }
evm-runtime = { version = "0.37.0", default-features = false }

# jsonrpsee
# (wasm)
jsonrpsee = { version = "0.16.2", default-features = false }

# Substrate
# (wasm)
frame-support = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }
sp-arithmetic = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }
sp-staking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }
sp-runtime-interface = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }
sp-externalities = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }
sp-io = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }
frame-benchmarking = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }
sp-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }
sp-keyring = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }

# (native)
sp-consensus-aura = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0" }
sp-tracing = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0" }
sc-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0" }
sc-transaction-pool-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0" }
sp-blockchain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0" }
sc-client-api = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0" }
sc-network = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0" }
sc-utils = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0" }
sp-block-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0" }
sp-transaction-pool = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0" }
substrate-prometheus-endpoint = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0" }

# Substrate pallets
# (wasm)
pallet-contracts = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }
pallet-contracts-primitives = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }
pallet-balances = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }
pallet-timestamp = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }
pallet-session = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }
pallet-assets = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }

# Polkadot
# (wasm)
xcm = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }
xcm-executor = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }
polkadot-parachain = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }
xcm-builder = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }

# (native)
polkadot-runtime-parachains = { git = "https://github.com/paritytech/polkadot-sdk", tag = "polkadot-v1.9.0", default-features = false }

# Frontier
# (wasm)
fp-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.9.0", default-features = false }
pallet-evm = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.9.0", default-features = false, features = ["forbid-evm-reentrancy"] }

# (native)
fp-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.9.0" }
fc-rpc-core = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.9.0" }
fc-rpc = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.9.0" }
fc-consensus = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.9.0" }
fc-db = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.9.0" }
fc-api = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.9.0" }
fc-storage = { git = "https://github.com/paritytech/frontier", branch = "polkadot-v1.9.0" }

# Moonbeam EVM Tracing
# (wasm)
moonbeam-evm-tracer = { path = "./vendor/runtime/evm-tracer", default-features = false }
moonbeam-rpc-primitives-debug = { path = "./vendor/primitives/debug", default-features = false }
moonbeam-rpc-primitives-txpool = { path = "./vendor/primitives/txpool", default-features = false }
evm-tracing-events = { path = "./vendor/primitives/evm-tracing-events", default-features = false }
moonbeam-primitives-ext = { path = "./vendor/runtime/ext", default-features = false }

# (native)
moonbeam-rpc-debug = { path = "./vendor/rpc/debug" }
moonbeam-rpc-trace = { path = "./vendor/rpc/trace" }
moonbeam-rpc-txpool = { path = "./vendor/rpc/txpool" }
moonbeam-client-evm-tracing = { path = "./vendor/evm-tracing" }
moonbeam-rpc-core-types = { path = "./vendor/rpc-core/types" }
moonbeam-rpc-core-txpool = { path = "./vendor/rpc-core/txpool" }
moonbeam-rpc-core-trace = { path = "./vendor/rpc-core/trace" }
moonbeam-rpc-core-debug = { path = "./vendor/rpc-core/debug" }
